test/compilable/ice4481.d
// EXTRA_SOURCES: imports/b4481.d
import imports.a4481;
import imports.b4481;

void main() {}
