test/fail_compilation/fail51.d
// interface A{void f();}

 interface A:B{void f();}
 interface B:A{void g();}
